tests/files/lexer_tests/should_fail/049.cmdr
// Illegal character in variable name (ascii 16)
myvar = 16;